# UbiquityTauri

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  discovery.rs  lib.rs  ssh.rs  ssh_process.rs
src/components/: CodeEntry.tsx  DeviceCard.tsx  Scanner.tsx
