[package]
name = "vivaspot-setup-assistant"
version = "0.1.0"
description = "VivaSpot Setup Assistant — discovers and adopts UniFi APs"
authors = ["VivaSpot <support@vivaspot.com>"]
license = "proprietary"
repository = "https://github.com/andyfox587/UbiquityTauri"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for /api/setup-code
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SSH client for set-inform command
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1"

# Low-level UDP socket for broadcast discovery
socket2 = "0.5"

# Async utilities
futures = "0.3"
